--- a/build.gradle
+++ b/build.gradle
@@ -133,6 +133,8 @@ dependencies {
     testImplementation 'org.hamcrest:hamcrest:2.2'
     testImplementation 'org.mockito:mockito-core:5.12.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
+  testImplementation 'org.springframework:spring-test:6.2.6'
+  testImplementation 'org.springframework:spring-web:6.2.6'
     testImplementation 'com.squareup.okhttp3:okhttp:4.11.0'
 }
 
