build: inc version
also disable signing and snapshot

--- a/gradle/versioning.gradle
+++ b/gradle/versioning.gradle
@@ -4,7 +4,7 @@ def getVersionFromFile() {
 }
 
 def isSnapshot() {
-    return hasProperty('isSnapshot') ? isSnapshot.toBoolean() : true
+    return hasProperty('isSnapshot') ? isSnapshot.toBoolean() : false
 }
 
 def getVersionName() {
