--- a/gradle/maven-publish.gradle
+++ b/gradle/maven-publish.gradle
@@ -94,13 +94,13 @@ publishing {
     }
 }
 
-signing {
-    def signingKey = System.getenv("SIGNING_KEY")
-    def signingPassword = System.getenv("SIGNING_PASSWORD")
-    useInMemoryPgpKeys(signingKey, signingPassword)
-
-    sign publishing.publications.mavenJava
-}
+//signing {
+//    def signingKey = System.getenv("SIGNING_KEY")
+//    def signingPassword = System.getenv("SIGNING_PASSWORD")
+//    useInMemoryPgpKeys(signingKey, signingPassword)
+//
+//    sign publishing.publications.mavenJava
+//}
 
 javadoc {
     if(JavaVersion.current().isJava9Compatible()) {
