--- a/settings.gradle
+++ b/settings.gradle
@@ -3,5 +3,16 @@ pluginManagement {
         gradlePluginPortal()
     }
 }
-
+plugins{
+  id "org.gradle.toolchains.foojay-resolver" version "1.0.0"
+}
+toolchainManagement {
+  jvm {
+    javaRepositories {
+      repository("foojay") {
+        resolverClass = org.gradle.toolchains.foojay.FoojayToolchainResolver
+      }
+    }
+  }
+}
 rootProject.name = 'mvc-auth-commons'
